--- a/common/scss/layout/_grid.scss
+++ b/common/scss/layout/_grid.scss
@@ -28,7 +28,7 @@
 .grid__span--8{width: 66.66%;}
 .grid__span--9{width: 75%;}
 .grid__span--10{width: 83.33%;}
-.grid__span--11{width: 91.66;}
+.grid__span--11{width: 91.66%;}
 .grid__span--12{width: 100%;}
 
 @for $value from 1 through 12{
