--- a/common/scss/layout/_footer.scss
+++ b/common/scss/layout/_footer.scss
@@ -30,7 +30,7 @@
     list-style: none;
   }
 }
-.footer__nav__listItem{
+.footer__nav__list__item{
   float: left;
   &:after{
   // padding-left: 10px;
