--- a/common/scss/module/_parts.scss
+++ b/common/scss/module/_parts.scss
@@ -18,7 +18,7 @@
   padding: 0 10px;
 }
 }
-.breadCrumbs__listItem{
+.breadCrumbs__list__item{
   float: left;
   margin-right: 10px;
   list-style: none;
