--- a/common/scss/module/_form.scss
+++ b/common/scss/module/_form.scss
@@ -1,2 +1,14 @@
 @charset "UTF-8";
 @import "../vars";
+
+input[type="text"]{
+  border: none;
+  border-radius: 0px;
+  -webkit-appearance: none;
+  padding: 5px;
+}
+textarea {
+  resize: none;
+  max-width: 100%;
+  width:100%;
+}
