明朝体がWindowsで表示されない不具合を修正

--- a/common/scss/_mixin.scss
+++ b/common/scss/_mixin.scss
@@ -105,7 +105,9 @@
 }
 
 //font
-@mixin mincho{font-family: "Times New Roman", "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "メイリオ", Meiryo, serif;}
+@mixin mincho{font-family: "Times New Roman", "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN","HG明朝E","ＭＳ Ｐ明朝","MS PMincho","MS 明朝", "MS 明朝", serif;}
+
+// @mixin mincho{font-family: "Times New Roman", "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "メイリオ", Meiryo, serif;}
 
 // @mixin mincho{font-family: "Times New Roman", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "游明朝", YuMincho, serif;}
 
